@@ -68,8 +68,8 @@ Things we'd like to do in 0.2.0.x:
         in the future, then log about skew.
       o should change the "skew complaint" to specify in largest units
         rather than just seconds.
-    - Learn new authority IPs from consensus/certs.
-    - karsten's patches
+    o Learn new authority IPs from consensus/certs.
+    o karsten's patches
 
   - Before the feature freeze: (Roger)
     - Make tunnelled dir conns use begin_dir if enabled
